added rate limit & removed bart-cnn-model && fix minor issues

--- a/front/src/locales/ar.json
+++ b/front/src/locales/ar.json
@@ -9,18 +9,31 @@
   },
   "landing": {
     "heroTitle": "روبوت محادثة مدعوم بالذكاء الاصطناعي",
+    "aiPoweredConversation": "محادثات مدعومة بالذكاء الاصطناعي",
+    "languages": "لغات مدعومة",
+    "possibilities": " إمكانيات غير محدودة",
+    "aiModels": "نماذج ذكاء اصطناعي",
     "heroSubtitle": "اختبر مستقبل المحادثة مع نماذج ذكاء اصطناعي متعددة",
     "getStarted": "ابدأ الآن",
     "learnMore": "اعرف المزيد",
     "featuresTitle": "المميزات",
+    "featuresDescription": "اكتشف ميزات قوية مصممة لتعزيز تجربة محادثاتك بالذكاء الاصطناعي",
     "feature1Title": "نماذج ذكاء اصطناعي متعددة",
     "feature1Desc": "اختر من بين ثلاثة نماذج ذكاء اصطناعي قوية لمحادثاتك",
     "feature2Title": "دعم متعدد اللغات",
     "feature2Desc": "دعم كامل للغة الإنجليزية والعربية مع تخطيط من اليمين لليسار",
     "feature3Title": "سجل المحادثات",
     "feature3Desc": "احفظ وراجع جميع محادثاتك السابقة",
+    "feature4Title": "سرعة فائقة",
+    "feature4Desc":   "احصل على ردود فورية مدعومة بتقنية الذكاء الاصطناعي المتقدمة",
+    "feature5Title":  "آمن وخاص",
+    "feature5Desc": "محادثاتك محفوظة و غير متاحة خارج حسابك الشخصي",
+    "feature6Title": "ملخصات ذكية",
+    "feature6Desc": "ملخصات شخصية مولدة بالذكاء الاصطناعي لتجارب مخصصة",
     "aboutTitle": "عن التطبيق",
-    "aboutDesc": "يوفر روبوت المحادثة الخاص بنا ردودًا ذكية باستخدام أحدث نماذج اللغة."
+    "aboutDesc": "يوفر روبوت المحادثة الخاص بنا ردودًا ذكية باستخدام أحدث نماذج اللغة",
+    "footerText1": ".تدمج منصتنا نماذج ذكاء اصطناعي متطورة لتزويدك بردود ذكية وواعية بالسياق. سواء كنت تبحث عن معلومات أو إلهام إبداعي أو مساعدة تقنية، يتكيف روبوت المحادثة الخاص بنا مع احتياجاتك",
+    "footerText2": ".تم بناء تطبيقنا باستخدام تقنيات حديثة لضمان تجربة سلسة وسريعة الاستجابة عبر جميع الأجهزة. يتم تخزين سجل محادثاتك بأمان، ويولد الذكاء الاصطناعي لدينا ملخصات شخصية لتوجيه تفاعلاتك المستقبلية"
   },
   "auth": {
     "email": "البريد الإلكتروني",
@@ -41,6 +54,7 @@
     "selectModel": "اختر نموذج الذكاء الاصطناعي",
     "typeMessage": "اكتب رسالتك...",
     "newChat": "محادثة جديدة",
+    "Messages": "رسائل",
     "chatHistory": "سجل المحادثات",
     "noChats": "لا يوجد سجل محادثات بعد",
     "thinking": "جاري التفكير...",
@@ -56,6 +70,7 @@
   "profile": {
     "title": "الملف الشخصي",
     "aiSummary": "الملخص المولد بالذكاء الاصطناعي",
+    "oldSummaries": "ملخصات سابقة",
     "language": "اللغة",
     "noSummary": "لم يتم إنشاء ملخص بعد. ابدأ المحادثة لإنشاء ملخص ملفك الشخصي!",
     "totalChats": "إجمالي المحادثات",
