--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -9,18 +9,31 @@
   },
   "landing": {
     "heroTitle": "AI-Powered Chatbot",
+    "aiPoweredConversation": "AI-Powered Conversations",
+    "languages": "Supported Languages",
+    "possibilities": "Possibilities",
+    "aiModels": "AI Models",
     "heroSubtitle": "Experience the future of conversation with multiple AI models",
     "getStarted": "Get Started",
     "learnMore": "Learn More",
     "featuresTitle": "Features",
+    "featuresDescription": "Discover powerful features designed to enhance your AI conversation experience",
     "feature1Title": "Multiple AI Models",
     "feature1Desc": "Choose from three powerful AI models for your conversations",
     "feature2Title": "Multilingual Support",
     "feature2Desc": "Full support for English and Arabic with RTL layout",
     "feature3Title": "Chat History",
     "feature3Desc": "Save and revisit all your previous conversations",
+    "feature4Title": "Lightning Fast",
+    "feature4Desc": "Get instant responses powered by advanced AI technology",
+    "feature5Title": "Secure & Private",
+    "feature5Desc": "Your conversations are private and protected",
+    "feature6Title": "Smart Summaries",
+    "feature6Desc": "AI-generated profile summaries for personalized experiences",
     "aboutTitle": "About",
-    "aboutDesc": "Our AI chatbot provides intelligent responses using state-of-the-art language models."
+    "aboutDesc": "Our AI chatbot provides intelligent responses using state-of-the-art language models.",
+    "footerText1": "Our platform integrates cutting-edge AI models to provide you with intelligent, context-aware responses.Whether you are seeking information, creative inspiration, or technical assistance, our chatbot adapts to your needs.",
+    "footerText2": "Built with modern technologies, our application ensures a smooth, responsive experience across all devices. Your chat history is securely stored, and our AI generates personalized summaries to guide your future interactions"
   },
   "auth": {
     "email": "Email",
@@ -41,6 +54,7 @@
     "selectModel": "Select AI Model",
     "typeMessage": "Type your message...",
     "newChat": "New Chat",
+    "Messages": "messages",
     "chatHistory": "Chat History",
     "noChats": "No chat history yet",
     "thinking": "Thinking...",
@@ -58,6 +72,7 @@
     "aiSummary": "AI-Generated Summary",
     "language": "Language",
     "noSummary": "No summary generated yet. Start chatting to generate your profile summary!",
+    "oldSummaries": "Old Summaries",
     "totalChats": "Total Chats",
     "totalMessages": "Total Messages",
     "memberSince": "Member Since"
