--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -75,7 +75,8 @@
     "oldSummaries": "Old Summaries",
     "totalChats": "Total Chats",
     "totalMessages": "Total Messages",
-    "memberSince": "Member Since"
+    "memberSince": "Member Since",
+    "lastActivity": "Last Activity"
   },
   "common": {
     "loading": "Loading...",
